fixed overflow issue

--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -8,7 +8,6 @@
 }
 
 .main {
-  padding: 5rem 1rem;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -43,6 +42,10 @@
 }
 
 @media (min-width: 1400px) {
+  .main {
+    padding: 5rem 1rem;
+  }
+
   .grid {
     width: 1200px;
   }
@@ -91,10 +94,16 @@
 
 .scrollableListContainer {
   max-width: 95vw;
+  width: 500px;
   height: 300px;
   border: 1px solid grey;
   border-radius: 10px;
   margin-bottom: 1rem;
   padding: 0.5rem;
   text-align: center;
+}
+
+.scrollableList {
+  overflow: auto;
+  max-height: calc(100% - 1rem)
 }
